# daily-quote

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/20161229051424_initial_quote_schema/: down.sql  up.sql
backend/src/: counts.rs  database.rs  main.rs  models.rs  quotes.rs  schema.rs
frontend/: Cargo.toml
frontend/discord/: Cargo.toml
frontend/discord/src/: main.rs
frontend/groupme/: Cargo.toml
frontend/groupme/src/: bot.rs  main.rs
scripts/: daily-quote.py
