[package]
name = "quote-storage"
version = "0.1.0"
authors = ["thadan64@gmail.com"]
license = "Apache-2.0"
repository = "https://github.com/TheDan64/daily-quote"

[dependencies]
diesel = "0.9.1"
diesel_codegen = { version = "0.9.0", default-features = false, features = ["dotenv", "postgres"] }
docopt = "0.6.0"
docopt_macros = "0.6.88"
dotenv = "0.8.0"
rand = "0.3"
regex = "0.2.0"
rustc-serialize = "0.3.22"
lazy_static = "0.2.2"
