[package]
name = "discord"
version = "0.1.0"
authors = ["Daniel Kolsoi <ThaDan64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.1", features = ["macros", "rt", "rt-multi-thread"] }
