[package]
name = "groupme"
version = "0.1.0"
authors = ["thadan64@gmail.com"]
license = "Apache-2.0"
repository = "https://github.com/TheDan64/daily-quote"
edition = "2018"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
hyper = "0.10.0"
hyper-native-tls = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
