[package]
name = "groupme"
version = "0.2.0"
authors = ["thadan64@gmail.com"]
license = "Apache-2.0"
repository = "https://github.com/TheDan64/daily-quote"
edition = "2018"

[dependencies]
anyhow = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.1", features = ["macros", "rt", "rt-multi-thread"] }
